--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,11 +7,11 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "com.example.navigationdrawer"
+        applicationId "com.vbsolutions.navigationdrawer"
         minSdkVersion 21
-        targetSdkVersion 29
-        versionCode 1
-        versionName "1.0"
+        targetSdkVersion 31
+        versionCode 2
+        versionName "2.0"
 
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
