--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.navigationdrawer" >
+    package="com.vbsolutions.navigationdrawer">
 
     <application
         android:allowBackup="true"
@@ -8,11 +8,17 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
 
-        <activity android:name=".MainActivityCustom" />
-        <activity android:name=".SignIn" />
-        <activity android:name=".SplashScreen" >
+        <activity
+            android:name="com.vbsolutions.navigationdrawer.MainActivityCustom"
+            android:exported="true" />
+        <activity
+            android:name="com.vbsolutions.navigationdrawer.SignIn"
+            android:exported="true" />
+        <activity
+            android:name="com.vbsolutions.navigationdrawer.SplashScreen"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
